[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Controls/DialogWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/AddTransaction.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Controls/TextInput.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/TimeburnerBold-peGR.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Controls/ToggleButton.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 20
font_data = ExtResource( 4 )

[node name="AddTransaction" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="OverlayMaskButton" parent="." index="0"]
modulate = Color( 0, 0, 0, 0.392157 )

[node name="CenterContainer" parent="." index="1"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogContainer" parent="CenterContainer" index="0"]
margin_top = 34.0
margin_bottom = 566.0
rect_min_size = Vector2( 328, 532 )
mouse_filter = 2

[node name="MarginContainer" parent="CenterContainer/DialogContainer" index="1"]
margin_right = 3.05176e-05
margin_bottom = 4.00003
rect_min_size = Vector2( 328, 532 )
mouse_filter = 2

[node name="CenterContainer" parent="CenterContainer/DialogContainer/MarginContainer" index="0"]
margin_bottom = 536.0
rect_min_size = Vector2( 280, 532 )
mouse_filter = 2

[node name="VBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer" index="0"]
margin_left = 0.0
margin_top = 2.0
margin_right = 280.0
margin_bottom = 534.0
rect_min_size = Vector2( 0, 532 )
mouse_filter = 2
custom_constants/separation = 32

[node name="DialogTitle" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer" index="0"]
margin_right = 280.0
margin_bottom = 90.0

[node name="Title" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogTitle/MarginContainer" index="0"]
margin_top = 26.0
margin_right = 272.0
margin_bottom = 59.0

[node name="NumberOfCoins" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer" index="1" instance=ExtResource( 3 )]
margin_top = 122.0
margin_right = 280.0
margin_bottom = 170.0

[node name="Label" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/NumberOfCoins" index="6"]
custom_fonts/font = SubResource( 1 )
text = "Number of Coins"

[node name="ExchangePrice" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer" index="2" instance=ExtResource( 3 )]
margin_top = 202.0
margin_right = 280.0
margin_bottom = 250.0

[node name="Label" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/ExchangePrice" index="6"]
custom_fonts/font = SubResource( 2 )
text = "Exchange Price"

[node name="TransactionAmount" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer" index="3" instance=ExtResource( 3 )]
margin_top = 282.0
margin_right = 280.0
margin_bottom = 330.0

[node name="Label" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionAmount" index="6"]
custom_fonts/font = SubResource( 3 )
text = "Transaction Amount"

[node name="TransactionDate" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer" index="4" instance=ExtResource( 3 )]
margin_top = 362.0
margin_right = 280.0
margin_bottom = 410.0

[node name="Label" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionDate" index="6"]
custom_fonts/font = SubResource( 4 )
text = "Date"

[node name="CreditOrDebit" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer" index="5" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 401.0
margin_right = 280.0
margin_bottom = 450.0

[node name="HBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/CreditOrDebit/MarginContainer" index="0"]
margin_bottom = 49.0

[node name="CheckButton" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/CreditOrDebit/MarginContainer" index="1"]
margin_bottom = 49.0
text = "Deposit"

[node name="DialogActionButtons" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer" index="6"]
margin_top = 442.0
margin_right = 280.0
margin_bottom = 532.0
mouse_filter = 1

[node name="OkButton" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogActionButtons/HBoxContainer" index="0"]
margin_right = 123.0

[node name="CancelButton" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogActionButtons/HBoxContainer" index="1"]
margin_left = 131.0
margin_right = 254.0
[connection signal="CancelClicked" from="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogActionButtons" to="." method="_on_DialogActionButtons_CancelClicked"]
[connection signal="OkClicked" from="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogActionButtons" to="." method="_on_DialogActionButtons_OkClicked"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="CenterContainer/DialogContainer"]

[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogTitle"]

[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/NumberOfCoins"]

[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/ExchangePrice"]

[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionAmount"]

[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionDate"]

[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/CreditOrDebit"]

[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogActionButtons"]
